qualities .prx added

--- a/TestVideoCapture/TestVideoCapture.csproj
+++ b/TestVideoCapture/TestVideoCapture.csproj
@@ -98,6 +98,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Qualities\good.prx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
